--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/foodImage_1"
-        android:src="@drawable/myrestaurants_food_pic"
+        android:layout_below="@+id/myRestaurantsIcon"
+        android:src="@drawable/myrestaurants_food_pic5"
         android:scaleType="centerInside" />
 
     <TextView
@@ -28,8 +29,19 @@
         android:textSize="15sp"
         android:id="@+id/introText"/>
 
-    <Button style="@style/Widget.AppCompat.Button.Colored"
+    <EditText
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/locationEditText"
+        android:background="@color/colorTextIcons"
+        android:layout_above="@+id/findRestaurantsButton"
+        android:layout_marginBottom="10dp"
+        android:padding="5dp"
+        android:hint="Enter Zip Code"
+        android:layout_centerHorizontal="true" />
+
+    <Button style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="  Find Restaurants  "
         android:id="@+id/findRestaurantsButton"
@@ -38,6 +50,6 @@
         android:textSize="20sp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp" />
+        android:layout_marginBottom="0dp" />
 
 </RelativeLayout>
